@@ -2,25 +2,31 @@ INCLUDE_DIRECTORIES(
 	.
 )
 
-FILE(GLOB OBDREPAIR_SRCS
-	*.c *.h
+SET(LIBOBDREPAIR_SRCS
+	obdrepair.c  obdrepair.h
 )
 
-SET(OBDREPAIR_LIBS
+ADD_LIBRARY(ckobdrepair STATIC ${LIBOBDREPAIR_SRCS})
+
+SET(OBDREPAIRMAIN_SRCS
+	obdrepairmain.c
+)
+
+SET(OBDREPAIRMAIN_LIBS
+	ckobdrepair
 	cksqlite
 )
 
 IF("${CMAKE_SYSTEM}" MATCHES "Linux")
-        SET(OBDREPAIR_LIBS ${OBDREPAIR_LIBS} pthread dl)
+        SET(OBDREPAIRMAIN_LIBS ${OBDREPAIRMAIN_LIBS} pthread dl)
 ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")
 
-ADD_EXECUTABLE(obdlogrepair ${OBDREPAIR_SRCS})
+ADD_EXECUTABLE(obdlogrepair ${OBDREPAIRMAIN_SRCS})
 
-TARGET_LINK_LIBRARIES(obdlogrepair ${OBDREPAIR_LIBS})
+TARGET_LINK_LIBRARIES(obdlogrepair ${OBDREPAIRMAIN_LIBS})
 
 INSTALL(TARGETS obdlogrepair
 	RUNTIME DESTINATION bin)
-
 
 INSTALL(FILES ${OBDGPSLogger_SOURCE_DIR}/man/man1/obdlogrepair.1
 	DESTINATION share/man/man1)
